--- a/course-components/mystyles.css
+++ b/course-components/mystyles.css
@@ -1,8 +1,12 @@
+/* **************** RESET **************** */
 body {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
+
+/* **************** UTILITIES **************** */
+
 .material-icons {
   font-family: "Material Icons";
   font-weight: normal;
@@ -30,8 +34,10 @@ body {
 .collapsed {
   display: none;
 }
+/* **************** COMPONENTS **************** */
+/* ----- NAVBAR ----- */
 nav {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.616);
   color: white;
   width: 100%;
 }
@@ -49,7 +55,7 @@ nav .mobile .header {
 
 nav .mobile .header .more button {
   border: none;
-  background-color: black;
+  background-color: transparent;
   color: white;
   padding: 15px;
   cursor: pointer;
@@ -100,7 +106,7 @@ nav .desktop .secondary.mini {
   }
 
   nav .secondary.mini .submenu {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.616);
     position: absolute;
     display: none;
     width: 200px;
